opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: [
  "Vincent Hanquez" "Anil Madhavapeddy" "David Scott" "Jonathan Ludlam"
]
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-evtchn"
bug-reports: "https://github.com/mirage/ocaml-evtchn/issues"
doc: "https://mirage.github.io/ocaml-evtchn/"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.0"}
  "xen-evtchn" {=version}
  "lwt-dllist"
  "lwt"
  "cmdliner"
  "ounit" {with-test}
  "conf-xen"
]
available: [ arch != "s390x" & arch != "ppc64" ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-evtchn.git"
synopsis: "Xen event channel interface for Linux"
description: """
Event channels are the Xen equivalent of interrupts, used to signal
when data (or space) is available for processing. This implementation
is a binding to a set of libxc functions which access `/dev/xen/evtchn`
for userspace.
"""
